--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,8 @@
     "com.unity.localization": "1.5.4",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.analytics": "6.1.0",
+    "com.unity.services.authentication": "3.5.1",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
