[fix] 난이도로 로그로 보냄

--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,4 +1,4 @@
 {
-  "EnvironmentName": "development",
-  "EnvironmentId": "337b1d13-4e9f-45e2-9538-6ba48d3658df"
+  "EnvironmentName": "test",
+  "EnvironmentId": "44f2f8cb-481b-45d9-842f-884725d434a6"
 }
