--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,4 +1,4 @@
 {
-  "EnvironmentName": "development",
-  "EnvironmentId": "337b1d13-4e9f-45e2-9538-6ba48d3658df"
+  "EnvironmentName": "0716-build",
+  "EnvironmentId": "47482e31-2b9c-4da9-910d-c34b1ff9f82e"
 }
