[fix] 튜토리얼 버그 수정

--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,4 +1,4 @@
 {
-  "EnvironmentName": "0716-build",
-  "EnvironmentId": "47482e31-2b9c-4da9-910d-c34b1ff9f82e"
+  "EnvironmentName": "earlyaccess",
+  "EnvironmentId": "243625b4-840f-47b2-8eb9-e32eaa2fc331"
 }
