--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,4 +1,4 @@
 {
-  "EnvironmentName": "earlyaccess",
-  "EnvironmentId": "243625b4-840f-47b2-8eb9-e32eaa2fc331"
+  "EnvironmentName": "development",
+  "EnvironmentId": "337b1d13-4e9f-45e2-9538-6ba48d3658df"
 }
