[fix] 사소한 수정

--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,4 +1,4 @@
 {
-  "EnvironmentName": "development",
-  "EnvironmentId": "337b1d13-4e9f-45e2-9538-6ba48d3658df"
+  "EnvironmentName": "production",
+  "EnvironmentId": "ff932717-0919-41fe-b685-9ce97f4e8827"
 }
