--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
+Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
