--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
 Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
+Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
+Assets/@Cosmos/Fonts/KaiseiDecol-Bold SDF.asset
