--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
 Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
 Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
 Assets/@Cosmos/Fonts/KaiseiDecol-Bold SDF.asset
+Assets/@Cosmos/Fonts/ChironSungHK-Bold SDF.asset
+Assets/@Cosmos/Fonts/KaiseiDecol-Bold SDF.asset
